--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ datasources.default.driver-class-name=org.h2.Driver
 datasources.default.schema-generate=CREATE_DROP
 datasources.default.dialect=H2
 #end::datasource[]
+
+# problematic config. Is this supposed to be always true now?
+jackson.bean-introspection-module=false
